# rig-rag

./: .env.example  .envrc  Cargo.toml  config.yaml  flake.nix
examples/: custom_agent.rs  embeddings.rs
src/: main.rs  settings.rs
