[package]
name = "rust_llm_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
config = { version = "0.15.11", features = ["yaml"] }
futures = "0.3.31"
rig-core = "0.12.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
